# guix-stack

./: .gitignore  .guix-channel  Makefile.am  README.org  configure.ac  guix.scm  manifest.scm  pre-inst-env  pre-inst-env.in  test-runners.scm
.guix/: manifest.scm
.guix/modules/: guix-stack-channel.scm
channel/: guix-stack-channel.scm  stguix-channel.scm
examples/: emacs.scm  guile-emacs.scm
git/hooks/: sendemail-validate  sendemail-validate.awk
guix-stack/: main.scm  patchset.scm
guix-stack/scripts/: hook.scm  pull.scm
guix/extensions/: stack.scm.in  stacked.scm  stacked.scm.in
src/: guix-stack-channel.scm
src/guix-stack/: channel-submodules.scm  patchset.scm  submodules.scm
src/guix-stack/scripts/: export-patches.scm  hook.scm  pull.scm
src/guix/extensions/: stack.scm
stguix/: main.scm
stguix/scripts/: pull.scm
tests/: export-patches.scm  hook.scm  patches.scm  test-runners.scm
